# MahinaOS

./: .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  COPYRIGHT.md  CREDITS.md  LICENSE  MAHINA_ENGINEERING_SNAPSHOT.md  Mahina_DCKL_Complete.md  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  linux-image-generic_7.0.0-27.27_amd64.deb  prompt.txt
src/: Cargo.toml
src/lgp-compositor/: Makefile.inc  main.c  main.h
src/lgp-rs/: Cargo.toml
src/lpkg/: Makefile.inc  db.c  main.c  pkg.c  pkg.h  verify.c
src/luna-about/: Makefile.inc  main.c
src/luna-about-rs/: Cargo.toml
src/luna-ai-d/: Makefile.inc  inference.c  inference.h  main.c  presence.c  presence.h
src/luna-calc/: Makefile.inc  main.c
src/luna-calc-rs/: Cargo.toml
src/luna-desktop/: Makefile.inc  main.c
src/luna-files/: Makefile.inc  main.c
src/luna-files-rs/: Cargo.toml
src/luna-gui/: Makefile.inc
src/luna-init/: console.c  console.h  ctl.c  ctl.h  depgraph.c  depgraph.h  hostname.c  hostname.h  log.c  log.h  main.c  mount.c  mount.h  panic.c  panic.h  reaper.c  reaper.h  service.c  service.h  shutdown.c  shutdown.h  signal.c  signal.h  splash.c  splash.h  supervisor.c  supervisor.h  toml.c  toml.h
src/luna-init-ctl/: main.c
src/luna-installer/: Makefile.inc  install_worker.c  install_worker.h  main.c
src/luna-island-rs/: Cargo.toml
src/luna-settings/: Makefile.inc  main.c
src/luna-settings-rs/: Cargo.toml
src/luna-setup-rs/: Cargo.toml
src/luna-shell/: Makefile.inc  decorations.c  (+9 more)
src/luna-shell-rs/: Cargo.toml
(+205 files in other folders)
